[package]
name = "full-stop"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "fus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { version = "1.0.5", features = ["serde1"] }
clap = "3.0.0-beta.5"
directories = "4.0.1"
globset = { version = "0.4.8", features = ["serde1"] }
relative-path = { version = "1.5.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"
walkdir = "2.3.2"
