[package]
name = "full-stop"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "fus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
dirs = "4.0.0"
glob = "0.3.0"
ignore = "0.4.18"
serde = { version = "1.0.130", features = ["derive"] }
shellexpand = "2.1.0"
thiserror = "1.0.30"
toml = "0.5.8"

[features]
