[package]
name = "full-stop"
description = "Full Stop. A dead simple dotfiles manager"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/midnightexigent/full-stop"
license = "MIT OR Apache-2.0"

[[bin]]
path = "src/main.rs"
name = "fus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-rc.7", features = ["derive"] } 
dirs = "4.0.0"
glob = "0.3.0"
ignore = "0.4.18"
serde = { version = "1.0.132", features = ["derive"] }
serde_with = "1.11.0"
shellexpand = "2.1.0"
thiserror = "1.0.30"
toml = "0.5.8"
walkdir = "2.3.2"

[features]
